refactor: refactor shouldRaiseIfHoldsMiddleCardsAndWonFirstRound test to use mock